...
        options={{
          title: t.tabHome,
          tabBarIcon: ({ color }) => <Icon name="home" size={24} color={color} />,
        }}
      />
      <Tab.Screen
        name="Tokens"
        component={TokensScreen}
        options={{
          title: t.tabAssets,
          tabBarIcon: ({ color }) => <Icon name="circle" size={24} color={color} />,
        }}
      />
...
